[gd_scene load_steps=17 format=2]

[ext_resource path="res://Telas/FundoTela1.png" type="Texture" id=1]
[ext_resource path="res://Fonte/NicoBold/NicoBold-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/botao_verde_normal.png" type="Texture" id=3]
[ext_resource path="res://assets_mytruck/face/CaminhaoCloroSelecaohover.png" type="Texture" id=4]
[ext_resource path="res://assets_mytruck/face/CaminhaoPVCSelecaohover.png" type="Texture" id=5]
[ext_resource path="res://assets_mytruck/face/CaminhaoSodaSelecao.png" type="Texture" id=6]
[ext_resource path="res://assets_mytruck/face/CaminhaoCloroSelecao.png" type="Texture" id=7]
[ext_resource path="res://assets_mytruck/face/CaminhaoPVCSelecao.png" type="Texture" id=8]
[ext_resource path="res://assets_mytruck/face/CaminhaoSodaSelecaoHover.png" type="Texture" id=9]
[ext_resource path="res://Cenas/Scripts/caminhoes.gd" type="Script" id=10]
[ext_resource path="res://assets_mytruck/icons e ui/seta_left_verde.png" type="Texture" id=11]
[ext_resource path="res://assets_mytruck/icons e ui/seta_left_verde_sombra.png" type="Texture" id=12]
[ext_resource path="res://Sons/confirmacao.wav" type="AudioStream" id=13]
[ext_resource path="res://Sons/voltar.wav" type="AudioStream" id=14]
[ext_resource path="res://Sons/hover.wav" type="AudioStream" id=15]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="caminhões" type="Node2D"]
script = ExtResource( 10 )

[node name="FundoTela" type="Sprite" parent="."]
position = Vector2( 634, 365 )
scale = Vector2( 0.673958, 0.681018 )
texture = ExtResource( 1 )

[node name="faixaVerde" type="Sprite" parent="."]
position = Vector2( 632, 70 )
scale = Vector2( 1.37613, 0.827333 )
texture = ExtResource( 3 )

[node name="ESCOLHA" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 276.0
margin_top = 53.0
margin_right = 458.0
margin_bottom = 69.0
rect_scale = Vector2( 4, 4 )
custom_fonts/font = SubResource( 1 )
text = "Escolha seu caminhão"

[node name="CLORO" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 112.0
margin_top = 208.0
margin_right = 157.0
margin_bottom = 224.0
rect_scale = Vector2( 4, 4 )
custom_fonts/font = SubResource( 1 )
text = "Cloro"

[node name="BotaoCloro" type="TextureButton" parent="."]
margin_top = 256.0
margin_right = 576.0
margin_bottom = 737.0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 4 )
expand = true

[node name="SODA" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 560.0
margin_top = 208.0
margin_right = 602.0
margin_bottom = 224.0
rect_scale = Vector2( 4, 4 )
custom_fonts/font = SubResource( 1 )
text = "Soda"

[node name="BotaoSoda" type="TextureButton" parent="."]
margin_left = 432.0
margin_top = 256.0
margin_right = 1008.0
margin_bottom = 737.0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 9 )
expand = true

[node name="PVC" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 992.0
margin_top = 208.0
margin_right = 1028.0
margin_bottom = 224.0
rect_scale = Vector2( 4, 4 )
custom_fonts/font = SubResource( 1 )
text = "PVC"

[node name="BotaoPvc" type="TextureButton" parent="."]
margin_left = 864.0
margin_top = 256.0
margin_right = 1440.0
margin_bottom = 737.0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 5 )
expand = true

[node name="BotaoVoltar" type="TextureButton" parent="."]
margin_left = 10.0
margin_top = 597.0
margin_right = 42.0
margin_bottom = 629.0
rect_scale = Vector2( 4, 4 )
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 12 )

[node name="SomConfirmar" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -10.0

[node name="SomVoltar" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -10.0

[node name="SomHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -10.0

[connection signal="mouse_entered" from="BotaoCloro" to="." method="_on_BotaoCloro_mouse_entered"]
[connection signal="pressed" from="BotaoCloro" to="." method="_on_BotaoCloro_pressed"]
[connection signal="mouse_entered" from="BotaoSoda" to="." method="_on_BotaoSoda_mouse_entered"]
[connection signal="pressed" from="BotaoSoda" to="." method="_on_BotaoSoda_pressed"]
[connection signal="mouse_entered" from="BotaoPvc" to="." method="_on_BotaoPvc_mouse_entered"]
[connection signal="pressed" from="BotaoPvc" to="." method="_on_BotaoPvc_pressed"]
[connection signal="mouse_entered" from="BotaoVoltar" to="." method="_on_BotaoVoltar_mouse_entered"]
[connection signal="pressed" from="BotaoVoltar" to="." method="_on_BotaoVoltar_pressed"]
